--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Cours Github</h1>
-    <h2>Version 1</h2>
-    <p>Bienvenue sur la version 1 de mon projet</p>
+    <h1>Bienvenue sur mon site </h1>
+     <p>Des modifications seront apporter très prochainement</p>
 </body>
 </html>
